# pooldeals

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
app/backend/: .env.example  .ruff.toml  Dockerfile  main.py  pyproject.toml
app/frontend/: index.html  tsconfig.json
app/frontend/src/: App.tsx
knowledge/: backend_coding_standards.md  frontend_coding_standards.md  general.md  product.md  security.md  source_control.md  testing.md
scripts/: run-local-agents.sh  run-local-models.sh
skills/backend-coding-standards/: SKILL.md
skills/frontend-coding-standards/: SKILL.md
skills/git/: SKILL.md
skills/security/: SKILL.md
skills/static-analysis/: SKILL.md
skills/testing/: SKILL.md
src/pooldeals/: crew.py  main.py
src/pooldeals/config/: agents.yaml  tasks.yaml
src/pooldeals/tools/: analysis_tools.py  git_tool.py  git_tools.py  safe_file_writer_tool.py
