[project]
name = "pooldeals"
version = "0.1.0"
description = "pooldeals using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = []

[project.scripts]
pooldeals = "pooldeals.main:run"
run_crew = "pooldeals.main:run"
train = "pooldeals.main:train"
replay = "pooldeals.main:replay"
test = "pooldeals.main:test"
run_with_trigger = "pooldeals.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "crewai[tools]==1.14.7",
    "ruff==0.15.21",
]
