[project]
name = "pooldeals"
version = "0.1.0"
description = "pooldeals using crewAI"
authors = [{ name = "James Wright", email = "hi@james.engineering" }]
requires-python = ">=3.10,<3.14"
dependencies = []

[project.scripts]
run_dev_flow = "pooldeals.main:run_dev_flow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "crewai[tools]==1.15.5",
    "pre-commit==4.6.0",
    "ruff==0.15.21",
]
