[project]
name = "pooldeals-backend"
version = "0.1.0"
description = "PoolDeals backend service"
authors = [
    {name = "PoolDeals Team"},
]
dependencies = [
    "fastapi[standard]>=0.104.0",
]

[project.scripts]
fastapi = "fastapi.cli:main"

[build-system]
requires = ["uv>=0.1.16"]
build-backend = "uv"